@@ -1,3 +1,7 @@
+2006-04-12  Francois Dechelle <francois@dechelle.net>
+
+	* Fixed multiple symbols link error, isnan() detection on Mac OS X
+
 2006-03-28  Eric Viara  <viara@sysra.com>
 
 	* Fixed a bug when database has reached its maximum size
